@@ -1880,10 +1880,8 @@ modrm_done:
 #endif
 #endif
 
-#if BX_SUPPORT_TRACE_CACHE
   if ((attr & BxTraceEnd) || ia_opcode == BX_IA_ERROR)
      return(1);
-#endif
 
   return(0);
 }
